<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SesionActividad">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensaje_bienvenida"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_horizontal"
            />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

        <LinearLayout
                android:id="@+id/frmInicioSesion"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="match_parent">


            <EditText
                android:id="@+id/editCorreo"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <EditText
                android:id="@+id/editContrasena"
                android:hint="@string/hint_contrasena"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_boton_ingresar"
                    android:textAllCaps="false"
                    />



                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnRegistraVista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_boton_irVistaRegistro"
                    android:textAllCaps="false"
                    />



            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/frmRegistro"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_registrar_usuario"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_horizontal"
                />


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <EditText
                android:id="@+id/editNombre"
                android:inputType="text"
                android:hint="@string/texto_registrar_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <EditText
                android:id="@+id/editApellido"
                android:inputType="text"
                android:hint="@string/texto_registrar_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />




            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <EditText
                android:id="@+id/editCorreoR"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <EditText
                android:id="@+id/editContrasena1"
                android:hint="@string/hint_contrasena"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <EditText
                android:id="@+id/editContrasena2"
                android:hint="@string/hint_confirma_contrasena"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRegistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_boton_registrar"
                    android:textAllCaps="false"
                    />



                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_boton_cancelar"
                    android:textAllCaps="false"
                    />



            </LinearLayout>

        </LinearLayout>

        </LinearLayout>


    </ScrollView>
</LinearLayout>